--- a/expence_tracker/src/index.css
+++ b/expence_tracker/src/index.css
@@ -1,13 +1,39 @@
-body {
+*{
   margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: rgb(136, 135, 135);
+  color: #fff;
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.app{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  text-align: center;
+}
+.app .container{
+  width: 70vw;
+  height: 100vh;
+}
+.header-container{
+  padding: 10px;
+  background-color: rgb(241, 157, 241);
+  width: 100%;
+  border-radius: 5px;
+  margin: 30px 0;
+}
+.header-container .header{
+  padding:10px 15px;
+  background-color: purple;
+  border-radius: 5px;
+  display: inline-block;
 }
