--- a/expence_tracker/src/index.css
+++ b/expence_tracker/src/index.css
@@ -86,5 +86,41 @@ body {
   border-radius: 5px;
   padding: 5px;
   display: flex;
-  align-items: center
+  align-items: center;
+  margin: 10px 0;
+}
+.board  .expencse-contianer .date-time{
+  display: flex;
+  align-items: center;
+}
+.board  .expencse-contianer .date-time .content{
+  display: flex;
+  flex-direction: column;
+  background-color: rgb(53, 53, 53);
+  border-radius: 5px;
+  border: 2px solid rgb(182, 181, 181);
+  padding: 5px 15px;
+  justify-content: center;
+}
+.board  .expencse-contianer .date-time .content .month{
+  color: #fff;
+  font-size: 17px;
+}
+.board  .expencse-contianer .date-time .content .year{
+  font-size: 15px;
+  color: rgb(209, 207, 207);
+}
+.board  .expencse-contianer .date-time .content .day{
+  font-size: 22px;
+  color: #fff;
+  font-weight: bold;
+}
+.board  .expencse-contianer .date-time  .text{
+  padding: 10px;
+}
+.board  .expencse-contianer .amount{
+  border: 2px solid rgb(182, 181, 181);
+  background-color: purple;
+  padding: 5px 15px;
+  border-radius: 8px;
 }
